--- a/views/about.html
+++ b/views/about.html
@@ -1,2 +1,6 @@
-<h1>About Us</h1>
-<p>Learn more about our company.</p>
+
+<p> 
+    I’m  justine lagata I study in northern bukidnon state collage the course 
+    I took is information technology I live in alae manolo fortich bukidnon. 
+    I am a student I want  to learn about programming.  
+   .</p>
