--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,3 +1,4 @@
-.cliff-h1{
-    color: #99ccff;
+body{
+    text-align: center;
+    background-image: url('https://i.pinimg.com/originals/64/84/78/648478cdaef8c9edeb2000fddb7acb6d.gif');
 }
