--- a/views/home.html
+++ b/views/home.html
@@ -1,2 +1,13 @@
-<h1 class="cliff-h1">Welcome to the Home Page</h1>
-<p>This is the home view of the SPA.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/home.css">
+    <title>Document</title>
+</head>
+<body>
+    </html><h1>Welcome to the Home Page</h1>
+    <p>This is the home view of the SPA.</p>
+</body>
+</html>
